wraper permission added in workflow

--- a/.github/workflows/CrossPlatformBuild.yml
+++ b/.github/workflows/CrossPlatformBuild.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3.2.0
 
-      - name: Build With Gradle
-        run: ./gradlew build
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
 
       - name: Build Android Release APK
         run: |
