--- a/.github/workflows/CrossPlatformBuild.yml
+++ b/.github/workflows/CrossPlatformBuild.yml
@@ -45,6 +45,11 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3.2.0
 
+      - name: Change wrapper permissions
+        run: | 
+          cd android 
+           chmod +x ./gradlew
+
       - name: Build Android Release APK
         run: |
           cd android
